--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,5 @@
+@import 'tailwindcss';
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #f0f0f0;
@@ -7,4 +9,18 @@ body {
   max-width: clamp(320, 90vh, 1200px);
   margin-inline: auto;
   width: 100%;
+  padding: 0 20px;
+}
+
+a,
+button {
+  transition: 0.2s;
+  cursor: pointer;
+}
+
+.bg-acent {
+  background: #f14f4f;
+}
+.bg-acent:hover {
+  background-color: red;
 }
